Massive refactor & basic entity loading